[project]
name = "math-ldm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "ruff>=0.8.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[tool.ruff]
select = [
    "E",
    "F",
    "C",
    "I",
    "N",
]

fixable = ["I"]

line-length = 88

extend-exclude = [
    ".venv/",
]
